[package]
name = "contract_p2p"
version = "1.0.0"
authors = ["Jorge Almeida"]
edition = "2021"

[dependencies]
ink = { version = "~4.2.1", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["ownable", "reentrancy_guard"] }
p2p_lunes_pkg = { path = "../../src", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    "openbrush/std",
    "p2p_lunes_pkg/std",
]
ink-as-dependency = []